Avoid horizontal scroll bar when a request is expanded and its body displayed.
git-svn-id: http://harviewer.googlecode.com/svn/trunk@192 b08ab4b8-96ea-11de-a1ee-bbbdd2d7798b

--- a/webapp/css/requestBody.css
+++ b/webapp/css/requestBody.css
@@ -5,6 +5,10 @@
     border-bottom: 1px solid #D7D7D7;
 }
 
+.netInfoRow .tabView {
+    width: 99%; /* avoid 1px horizontal scrollbar when a requst is expanded and tabView visible */
+}
+
 .netInfoText {
     padding: 8px;
     background-color: #FFFFFF;
